--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
-<h1>
-  Hello World
-</h1>
-
-<app-cars></app-cars>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12">
+            <p class="h1">Hello world</p>
+            <app-cars></app-cars>
+        </div>
+    </div>
+</div>
