--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -9,7 +9,13 @@
 <app-car *ngFor="let car of cars"></app-car>
 
 <ul>
-    <li *ngFor="let item of items; let idx = index">
-        <b>{{idx + 1}}</b> - <i>{{item.name}}</i>
+    <li *ngFor="let car of cars; let idx = index">
+        <div
+                [ngStyle]="{backgroundColor: (idx + 1) % 2 === 0 ? 'red' : 'green', 'color': 'white'}"
+                [ngClass]="{'big-text': setBigCarText(car)}"
+        >
+            <b>{{idx + 1}}</b> - <i>{{car}}</i>
+        </div>
+
     </li>
 </ul>
