--- a/src/app/car/car.component.html
+++ b/src/app/car/car.component.html
@@ -1,1 +1,1 @@
-<p>Марка авто: "{{ getName() }}", Год выпуска: "{{ carYear }}"</p>
+<p>Марка авто: "{{ carItem.name }}", Год выпуска: "{{ carItem.year }}"</p>
