--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,18 +1,7 @@
 <input type="text" class="form-control" [(ngModel)]="carName">
+<input type="text" class="form-control" [(ngModel)]="carYear">
 <button class="btn btn-primary" (click)="addCar()">Добавить машину</button>
-<p *ngIf="!addCarStatus; else status">Машина не добавлена</p>
-<ng-template #status>
-    <p>Машина добавлена</p>
-</ng-template>
+
 <hr>
 
-<app-car *ngFor="let car of cars"></app-car>
-
-<ul>
-    <li *ngFor="let item of items; let idx = index">
-        <div>
-            <b>{{idx + 1}}</b> - <i>{{item  | date: 'short'}}</i>
-        </div>
-
-    </li>
-</ul>
+<app-car *ngFor="let car of cars" [carItem]="car"></app-car>
