--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -2,4 +2,9 @@
 <hr>
 <app-add-car (onAddCar)="updateCarList($event)"></app-add-car>
 <hr>
-<app-car *ngFor="let car of cars" [carItem]="car"></app-car>
+<div class="list-group">
+    <app-car class="list-group-item" *ngFor="let car of cars" [carItem]="car">
+        <h4 #carHeading class="list-group-item-heading">Марка авто: "{{ car.name }}"</h4>
+        <p class="list-group-item-text">Год выпуска: "{{ car.year }}"</p>
+    </app-car>
+</div>
