--- a/src/app/cars/cars.component.html
+++ b/src/app/cars/cars.component.html
@@ -1,9 +1,13 @@
 <p>Форма</p>
 <hr>
 <app-add-car (onAddCar)="updateCarList($event)"></app-add-car>
+
+<button class="btn btn-success" (click)="changeCarName()">Изменить имя машины</button>
+<button class="btn btn-danger" (click)="deleteCar()">Удалить машину</button>
+
 <hr>
 <div class="list-group">
-    <app-car class="list-group-item" *ngFor="let car of cars" [carItem]="car">
+    <app-car class="list-group-item" *ngFor="let car of cars" [name]="car.name">
         <h4 #carHeading class="list-group-item-heading">Марка авто: "{{ car.name }}"</h4>
         <p class="list-group-item-text">Год выпуска: "{{ car.year }}"</p>
     </app-car>
