--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div class="container">
-    <div class="row">
-        <div class="col-xs-12">
-            <p class="h1">Hello world</p>
-            <app-cars></app-cars>
-        </div>
+    <div class="col-xs-8 col-xs-offset-2">
+        <h3>{{headerText}}</h3>
     </div>
 </div>
