--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
     <div class="col-xs-8 col-xs-offset-2">
-        <h3 appBackground>{{headerText}}</h3>
+        <h3 [appBackground]="'purple'" [defaultColor]="'transparent'">{{headerText}}</h3>
     </div>
 </div>
