--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,31 @@
 <div class="container">
   <div class="col-xs-8 col-xs-offset-2">
-    <form>
-
+    <form (ngSubmit)="submitForm(form)" #form="ngForm">
       <div class="form-group">
         <label>Email</label>
-        <input type="text" class="form-control">
+        <input
+                type="text"
+                class="form-control"
+                name="email"
+                ngModel
+        >
       </div>
       <div class="form-group">
         <label>Пароль</label>
-        <input type="password" class="form-control">
+        <input
+                type="password"
+                class="form-control"
+                name="pass"
+                ngModel
+        >
       </div>
       <div class="form-group">
         <label>Выберите страну</label>
-        <select class="form-control">
+        <select
+                class="form-control"
+                name="country"
+                ngModel
+        >
           <option value="ru">Россия</option>
           <option value="by">Белоруссия</option>
           <option value="ua">Украина</option>
@@ -20,11 +33,15 @@
       </div>
       <div class="radio" *ngFor="let ans of answers">
         <label>
-          <input type="radio" [value]="ans.type"> {{ans.text}}
+          <input
+                  type="radio"
+                  [value]="ans.type"
+                  name="answer"
+                  ngModel
+          > {{ans.text}}
         </label>
       </div>
       <button class="btn btn-success" type="submit">Сохранить</button>
-
     </form>
   </div>
 </div>
