--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-xs-8 col-xs-offset-2">
     <form (ngSubmit)="submitForm(form)" #form="ngForm">
-      <div class="form-group">
+      <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
         <label>Email</label>
         <input
                 type="text"
@@ -10,7 +10,9 @@
                 ngModel
                 required
                 email
+                #email="ngModel"
         >
+        <p *ngIf="email.invalid && email.touched">Введите корректный email</p>
       </div>
       <div class="form-group">
         <label>Пароль</label>
