--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,28 +1,30 @@
 <div class="container">
   <div class="col-xs-8 col-xs-offset-2">
     <form (ngSubmit)="submitForm(form)" #form="ngForm">
-      <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
-        <label>Email</label>
-        <input
-                type="text"
-                class="form-control"
-                name="email"
-                ngModel
-                required
-                email
-                #email="ngModel"
-        >
-        <p *ngIf="email.invalid && email.touched">Введите корректный email</p>
-      </div>
-      <div class="form-group">
-        <label>Пароль</label>
-        <input
-                type="password"
-                class="form-control"
-                name="pass"
-                ngModel
-                required
-        >
+      <div ngModelGroup="user">
+        <div class="form-group" [ngClass]="{'has-error': email.invalid && email.touched}">
+          <label>Email</label>
+          <input
+                  type="text"
+                  class="form-control"
+                  name="email"
+                  ngModel
+                  required
+                  email
+                  #email="ngModel"
+          >
+          <p *ngIf="email.invalid && email.touched">Введите корректный email</p>
+        </div>
+        <div class="form-group">
+          <label>Пароль</label>
+          <input
+                  type="password"
+                  class="form-control"
+                  name="pass"
+                  ngModel
+                  required
+          >
+        </div>
       </div>
       <div class="form-group">
         <label>Выберите страну</label>
