--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,12 @@
       <div class="form-group">
         <label>Email</label>
         <input type="text" class="form-control" formControlName="email">
+        <p *ngIf="form.get('email').invalid && form.get('email').touched">Пароль не должен быть пустым</p>
       </div>
       <div class="form-group">
         <label>Пароль</label>
         <input type="password" class="form-control" formControlName="pass">
+        <p *ngIf="form.get('pass').invalid && form.get('pass').touched">Пароль не должен быть пустым</p>
       </div>
       <div class="form-group">
         <label>Выберите страну</label>
@@ -22,8 +24,7 @@
           <input type="radio" [value]="ans.type" formControlName="answer"> {{ans.text}}
         </label>
       </div>
-      <button class="btn btn-success" type="submit">Сохранить</button>
-
+      <button class="btn btn-success" type="submit" [disabled]="form.invalid">Сохранить</button>
     </form>
   </div>
 </div>
