--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,37 +1,13 @@
 <div class="container">
-  <div class="col-xs-8 col-xs-offset-2">
-    <form [formGroup]="form" (ngSubmit)="onSubmit()">
-      <div formGroupName="user">
-        <div class="form-group">
-          <label>Email</label>
-          <input type="text" class="form-control" formControlName="email">
-          <p *ngIf="form.get('user.email').invalid && form.get('user.email').touched">Пароль не должен быть пустым</p>
-        </div>
-        <div class="form-group">
-          <label>Пароль</label>
-          <input type="password" class="form-control" formControlName="pass">
-          <p
-                  *ngIf="form.get('user.pass').invalid && form.get('user.pass').touched"
-          >
-            <span *ngIf="form.get('user.pass').errors['required']">Пароль не должен быть пустым</span>
-            <span *ngIf="form.get('user.pass').errors['lengthError']">Пароль не должен быть меньше {{ charsCount + 1 }} символов</span>
-          </p>
-        </div>
-      </div>
-      <div class="form-group">
-        <label>Выберите страну</label>
-        <select class="form-control" formControlName="country">
-          <option value="ru">Россия</option>
-          <option value="by">Белоруссия</option>
-          <option value="ua">Украина</option>
-        </select>
-      </div>
-      <div class="radio" *ngFor="let ans of answers">
-        <label>
-          <input type="radio" [value]="ans.type" formControlName="answer"> {{ans.text}}
-        </label>
-      </div>
-      <button class="btn btn-success" type="submit" [disabled]="form.invalid">Сохранить</button>
-    </form>
+  <div class="row">
+    <div class="col-xs-8 col-xs-offset-2">
+      <button class="btn btn-primary">Загрузить машину</button>
+      <hr>
+      <ul class="list-group">
+        <li class="list-group-item" *ngFor="let car of cars">
+          <span class="badge">{{ car.id }}</span> {{ car.color }} {{ car.name }}
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
