--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
-      <button class="btn btn-primary">Загрузить машину</button>
+      <button class="btn btn-primary" (click)="loadCars()">Загрузить машину</button>
       <hr>
       <ul class="list-group">
         <li class="list-group-item" *ngFor="let car of cars">
