async Pipe | Пример

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>{{ appTitile | async }}</h1>
   <div class="row">
     <div class="col-xs-8 col-xs-offset-2">
       <input type="text" class="form-control" [(ngModel)]="carName">
