--- a/src/app/car-page/car-page.component.html
+++ b/src/app/car-page/car-page.component.html
@@ -1,3 +1,5 @@
 <h2>Информация о машине {{id}} {{name}}</h2>
-
-<h3><a [routerLink]="['/cars', 8, 'Mazda']">Ссылка</a></h3>
+<h2>{{color}} {{year}}</h2>
+<h2>{{hash}}</h2>
+<hr>
+<h3><a (click)="openMazda()">Ссылка</a></h3>
