--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,6 +4,7 @@
       <ul class="nav navbar-nav">
         <li routerLinkActive="active" [routerLinkActiveOptions]="{exect: true}"><a routerLink="/">Главная</a></li>
         <li routerLinkActive="active"><a routerLink="/cars">Машины</a></li>
+        <li routerLinkActive="active"><a routerLink="/new">New</a></li>
       </ul>
     </div>
   </nav>
