--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,1 @@
-<div [@clickDiv]="clickedDivState" (click)="changeDivState()"></div>
+<div [@clickDiv]="clickedDivState" (click)="changeDivState()" (mousedown)="clickedDivState='active'"></div>
