--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<div [@clickDiv]="clickedDivState" (click)="changeDivState()" (mousedown)="clickedDivState='active'"></div>
+<!--<div [@clickDiv]="clickedDivState" (click)="changeDivState()" (mousedown)="clickedDivState='active'"></div>-->
+<div [@multi]="multistate" (click)="multistate = multistate === 'start' ? 'end' : 'start'"></div>
