--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <button class="btn btn-primary" (click)="isVisible = !isVisible">Переключить</button>
+
 <hr>
-<div [@changeWidthTrigger]="isVisible ? 'a' : 'b'" style="height: 50px; width: 300px; background-color: black;"></div>
+
+<div *ngIf="isVisible" [@divTrigger]="isVisible ? 'show' : 'hide'" class="alert alert-danger">Lorem ipsum dolor sit amet.</div>
