--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,3 @@
-<button class="btn btn-primary" (click)="isVisible = !isVisible">Переключить</button>
-
-<hr>
-
-<div
-        *ngIf="isVisible"
-        [@divTrigger]="isVisible ? 'show' : 'hide'"
-        (@divTrigger.start)="onAnimStart($event)"
-        (@divTrigger.done)="onAnimDone($event)"
-        class="alert alert-danger"
->
-    Lorem ipsum dolor sit amet.
-</div>
+<h1>
+  {{title}}
+</h1>
